tests/ui/did_you_mean/issue-36798.stderr
error[E0609]: no field `baz` on type `Foo`
  --> $DIR/issue-36798.rs:7:7
   |
LL |     f.baz;
   |       ^^^ help: a field with a similar name exists: `bar`

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0609`.
